--- a/car.html
+++ b/car.html
@@ -25,9 +25,9 @@ sitemap: true
 						<div class="row clearfix" style="position: relative;">
 							<div class="col-lg-6 offset-lg-6">
 								<div class="heading-block hlarge">
-									<h3>Our Fleet<br>Your Fleet</h3>
+									<h1>TOYOTA<br>THÁI HÒA TỪ LIÊM</h1>
 								</div>
-								<p>Assertively iterate enterprise-wide portals through synergistic products. Efficiently build adaptive schemas after transparent quality vectors. Phosfluorescently optimize competitive resources after extensive convergence. Rapidiously optimize high-quality meta-services via distributed architectures. Credibly deliver 24/365.</p>
+								<p><a href="{{ site.url }}/car/">Toyota Thái Hòa Từ Liêm</a> là đại lý 3S chính thức của <a href="www.toyota.com.vn">Toyota Việt Nam</a> tọa lạc tại vị trí phía tây Hà Nội với trục đường Tố Hữu Mỗ Lao. <b>Toyota Thái Hòa Từ Liêm</b> Hoạt động kết hợp 3 chức năng: Bán hàng; Bảo dưỡng, sửa chữa và Cung cấp phụ tùng chính hãng thành một hệ thống thống nhất.</p>
 							</div>
 						</div>
 					</div>
@@ -42,7 +42,7 @@ sitemap: true
 						<div class="col-lg-4 col-md-6 topmargin bottommargin-sm">
 
 							<div class="heading-block nobottomborder">
-								<h2 class="nott ls0" style="font-size: 44px; line-height: 1.2">Explore the New Mercedec Benz</h2>
+								<h2 class="nott ls0" style="font-size: 44px; line-height: 1.2">Khám phá Camry 2019</h2>
 							</div>
 							<span style="color: #BBB;">Eum nihil pretium quas aliqua, laboris ipsam diam congue natoque mollitia occaecati! Cubilia pede, numquam fringilla proident dis? Molestias repellat.<br><br>Quas perferendis urna, officiis necessitatibus deserunt recusandae urna ullamco hac do beatae cubilia iste dolorum, facilisi? Sit, hic, varius! Sollicitudin.<br><br>Nostrum feugiat beatae proident porro eleifend adipiscing nostrud aliquid sit.</span>
 							<div class="clear"></div>
