--- a/car.html
+++ b/car.html
@@ -651,8 +651,8 @@ sitemap: true
 				<div class="section nomargin nobg clearfix" style="padding: 100px 0;">
 					<div class="container clearfix">
 						<div class="heading-block center">
-							<div class="before-heading uppercase ls1" style="font-size: 13px; font-style: normal;">Lorem ipsum dolor sit amet, consectetur adipisicing.</div>
-							<h3 class="t700">Featured Vehicles</h3>
+							<div class="before-heading uppercase ls1" style="font-size: 13px; font-style: normal;"></div>
+							<h3 class="t700">Sản phẩm mới 2019</h3>
 						</div>
 
 						<!-- Portfolio Filter
@@ -660,11 +660,11 @@ sitemap: true
 						<ul class="portfolio-filter style-2 clearfix" data-container="#portfolio">
 							<li><a href="#" data-filter=".cf-cuv"><i class="icon-car-cuv"></i><span>Cuv</span></a></li>
 							<li><a href="#" data-filter=".cf-sedan"><i class="icon-car-sedan"></i><span>Sedan</span></a></li>
-							<li><a href="#" data-filter=".cf-supercar"><i class="icon-car-supercar"></i><span>Supercar</span></a></li>
+							<!--li><a href="#" data-filter=".cf-supercar"><i class="icon-car-supercar"></i><span>Supercar</span></a></li-->
 							<li><a href="#" data-filter=".cf-hatchback"><i class="icon-car-hatchback"></i><span>Hatchback</span></a></li>
-							<li><a href="#" data-filter=".cf-cabriolet"><i class="icon-car-cabriolet"></i><span>Cabriolet</span></a></li>
+							<!--li><a href="#" data-filter=".cf-cabriolet"><i class="icon-car-cabriolet"></i><span>Cabriolet</span></a></li-->
 							<!-- Show All Button -->
-							 <li class="fright activeFilter"><a class="button button-small button-rounded button-reset" href="#" data-filter="*">Show All</a></li>
+							 <li class="fright activeFilter"><a class="button button-small button-rounded button-reset" href="#" data-filter="*">Tất cả</a></li>
 						</ul> <!-- #portfolio-filter end -->
 
 						<div class="clear"></div>
