--- a/car.html
+++ b/car.html
@@ -658,11 +658,12 @@ sitemap: true
 						<!-- Portfolio Filter
 						============================================= -->
 						<ul class="portfolio-filter style-2 clearfix" data-container="#portfolio">
-							<li><a href="#" data-filter=".cf-cuv"><i class="icon-car-cuv"></i><span>Cuv</span></a></li>
+							<li><a href="#" data-filter=".cf-cuv"><i class="icon-car-cuv"></i><span>Suv</span></a></li>
 							<li><a href="#" data-filter=".cf-sedan"><i class="icon-car-sedan"></i><span>Sedan</span></a></li>
-							<!--li><a href="#" data-filter=".cf-supercar"><i class="icon-car-supercar"></i><span>Supercar</span></a></li-->
 							<li><a href="#" data-filter=".cf-hatchback"><i class="icon-car-hatchback"></i><span>Hatchback</span></a></li>
-							<!--li><a href="#" data-filter=".cf-cabriolet"><i class="icon-car-cabriolet"></i><span>Cabriolet</span></a></li-->
+							<li><a href="#" data-filter=".cf-dadung"><i class="icon-car-supercar"></i><span>Đa dụng</span></a></li>
+							<li><a href="#" data-filter=".cf-thuongmai"><i class="icon-car-cabriolet"></i><span>Thương mại</span></a></li>
+							<li><a href="#" data-filter=".cf-bantai"><i class="icon-car-cabriolet"></i><span>Bán tải</span></a></li>
 							<!-- Show All Button -->
 							 <li class="fright activeFilter"><a class="button button-small button-rounded button-reset" href="#" data-filter="*">Tất cả</a></li>
 						</ul> <!-- #portfolio-filter end -->
