--- a/car.html
+++ b/car.html
@@ -830,7 +830,7 @@ sitemap: true
 				============================================= -->
 				<div class="section nomargin ohidden">
 					<div class="heading-block nobottommargin center">
-						<h2>Video Gallery</h2>
+						<h2>VIDEO SẢN PHẨM TOYOTA THÁI HÒA TỪ LIÊM</h2>
 					</div>
 				</div>
 				<div class="dark section nopadding nomargin ohidden" style="height: 740px">
