--- a/car.html
+++ b/car.html
@@ -44,9 +44,9 @@ sitemap: true
 							<div class="heading-block nobottomborder">
 								<h2 class="nott ls0" style="font-size: 44px; line-height: 1.2">Khám phá Camry 2019</h2>
 							</div>
-							<span style="color: #BBB;">Eum nihil pretium quas aliqua, laboris ipsam diam congue natoque mollitia occaecati! Cubilia pede, numquam fringilla proident dis? Molestias repellat.<br><br>Quas perferendis urna, officiis necessitatibus deserunt recusandae urna ullamco hac do beatae cubilia iste dolorum, facilisi? Sit, hic, varius! Sollicitudin.<br><br>Nostrum feugiat beatae proident porro eleifend adipiscing nostrud aliquid sit.</span>
+							<span style="color: #BBB;">Toyota Camry 2019 đang là dòng xe dẫn đầu tại phiên bản sedan D cao cấp. Camry luôn là sự lựa chọn hàng đầu của khách hàng cần mua ô tô sang.<br>Hiện tại, Camry đang có 3 phiên bản. Tất cả đều là kiểu số tự động và sử dụng động cơ xăng. Dù có mức doanh số rất cao nhưng Camry cũng phải cạnh tranh với nhiều đối thủ như Mazda 6, Accord, Teana,…</span>
 							<div class="clear"></div>
-							<a href="demos/car/car-single.html" class="button button-rounded button-black button-dark noleftmargin topmargin-sm clearfix">Know More</a>
+							<a href="demos/car/car-single.html" class="button button-rounded button-black button-dark noleftmargin topmargin-sm clearfix">Xem chi tiết Camry 2019</a>
 
 						</div>
 
