--- a/car.html
+++ b/car.html
@@ -687,15 +687,15 @@ sitemap: true
 								</div>
 								<div class="portfolio-desc">
 									<h3><a href="demos/car/car-single.html">Toyota Yaris</a></h3>
-									<span>• 5 chỗ ngồi<br>• Hộp số tự động vô cấp<br>• Động cơ xăng - 1496 cc</span>
+									<span>Yaris thế hệ mới với thiết kế đột phá, ấn tượng, dáng vẻ năng động và cá tính mang đến cảm giác đầy kiêu hãnh và tự hào khi sở hữu một dòng xe đậm dấu ấn riêng.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
 									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 20000</span></div>
-									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-door"></i><span> 5 Seater</span></div>
-									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-fuel2"></i><span> 20kmpl</span></div>
-									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-signal"></i><span> Automatic</span></div>
-									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-wheel"></i><span> 15 Inch</span></div>
-									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-care"></i><span> 2015</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-door"></i><span> 5 chỗ ngồi</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-fuel2"></i><span> 42 lít</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-signal"></i><span> Số tự động vô cấp</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-wheel"></i><span> 16 Inch</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-care"></i><span> 2019</span></div>
 								</div>
 							</article>
 
