--- a/car.html
+++ b/car.html
@@ -680,8 +680,8 @@ sitemap: true
 									<a href="demos/car/car-single.html">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/YARIS-nguyentronghuynh.com.png" alt="Toyota Yaris">
 										<div class="filter-p-pricing">
-											<span class="p-price-msrp"><strong>Giá từ</strong></span>
-											<span class="p-price t700 ls1">650.000.000 VNĐ</span>
+											<span class="p-price-msrp ls1"><strong>Giá từ</strong></span>
+											<span class="p-price t700">650.000.000 VNĐ</span>
 										</div>
 									</a>
 								</div>
@@ -705,14 +705,14 @@ sitemap: true
 									<a href="demos/car/car-single.html">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/2.jpg" alt="Open Imagination">
 										<div class="filter-p-pricing">
-											<span class="p-price t700 ls1">$32,568</span>
-											<span class="p-price-msrp">MSRP : <strong>$35,698</strong></span>
+											<span class="p-price-msrp"><strong>Giá từ</strong></span>
+											<span class="p-price t700 ls1">345.000.000 VNĐ</span>
 										</div>
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Chevrolet Brown Traverse</a></h3>
-									<span>Enthusiastically incubate turnkey technologies for exceptional materials. Seamlessly implement emerging scenarios.</span>
+									<h3><a href="demos/car/car-single.html">Toyota Wigo</a></h3>
+									<span>TOYOTA WIGO là mẫu xe nhỏ sở hữu ngoại hình đậm chất thể thao với ngôn ngữ thiết kế trẻ trung và nhiều lựa chọn về màu sắc. TOYOTA WIGO xứng đáng là chiếc xe hơi đầu tiên của bạn.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
 									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 0-50 mph</span></div>
