--- a/car.html
+++ b/car.html
@@ -675,7 +675,7 @@ sitemap: true
 						<div id="portfolio" class="portfolio portfolio-3 grid-container clearfix" data-layout="fitRows">
 
 							<!-- Car 1 -->
-							<article class="portfolio-item cf-sedan" style="padding-bottom: 40px">
+							<article class="portfolio-item cf-hatchback" style="padding-bottom: 40px">
 								<div class="portfolio-image">
 									<a href="demos/car/car-single.html">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/YARIS-nguyentronghuynh.com.png" alt="Toyota Yaris">
@@ -700,13 +700,13 @@ sitemap: true
 							</article>
 
 							<!-- Car 2 -->
-							<article class="portfolio-item cf-suv" style="padding-bottom: 40px">
+							<article class="portfolio-item cf-hatchback" style="padding-bottom: 40px">
 								<div class="portfolio-image">
 									<a href="demos/car/car-single.html">
-										<img src="{{ site.url }}/car/assets/media/filter-cars/2.jpg" alt="Open Imagination">
+										<img src="{{ site.url }}/car/assets/media/filter-cars/WIGO-nguyentronghuynh.com.png" alt="Toyota Wigo">
 										<div class="filter-p-pricing">
-											<span class="p-price-msrp"><strong>Giá từ</strong></span>
-											<span class="p-price t700 ls1">345.000.000 VNĐ</span>
+											<span class="p-price-msrp ls1"><strong>Giá từ</strong></span>
+											<span class="p-price t700">345.000.000 VNĐ</span>
 										</div>
 									</a>
 								</div>
@@ -716,11 +716,11 @@ sitemap: true
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
 									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 0-50 mph</span></div>
-									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-door"></i><span> 7 Seater</span></div>
-									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-paint"></i><span> Brown</span></div>
-									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-signal"></i><span> Manual</span></div>
-									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-wheel"></i><span> 20-Inch</span></div>
-									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-care"></i><span> 2018</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-door"></i><span> 5 chỗ ngồi</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-fuel2"></i><span> 33 lít</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-signal"></i><span> Số sàn 5 cấp</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-wheel"></i><span> 14 Inch</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-care"></i><span> 2019</span></div>
 								</div>
 							</article>
 
