--- a/car.html
+++ b/car.html
@@ -712,7 +712,7 @@ sitemap: true
 								</div>
 								<div class="portfolio-desc">
 									<h3><a href="demos/car/car-single.html">Toyota Wigo</a></h3>
-									<span>TOYOTA WIGO là mẫu xe nhỏ sở hữu ngoại hình đậm chất thể thao với ngôn ngữ thiết kế trẻ trung và nhiều lựa chọn về màu sắc. TOYOTA WIGO xứng đáng là chiếc xe hơi đầu tiên của bạn.</span>
+									<span>TOYOTA WIGO là mẫu xe nhỏ sở hữu ngoại hình đậm chất thể thao với ngôn ngữ thiết kế trẻ trung và nhiều lựa chọn về màu sắc.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
 									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 0-50 mph</span></div>
