--- a/car.html
+++ b/car.html
@@ -658,7 +658,7 @@ sitemap: true
 						<!-- Portfolio Filter
 						============================================= -->
 						<ul class="portfolio-filter style-2 clearfix" data-container="#portfolio">
-							<li><a href="#" data-filter=".cf-cuv"><i class="icon-car-suv"></i><span>Suv</span></a></li>
+							<li><a href="#" data-filter=".cf-suv"><i class="icon-car-suv"></i><span>Suv</span></a></li>
 							<li><a href="#" data-filter=".cf-sedan"><i class="icon-car-sedan"></i><span>Sedan</span></a></li>
 							<li><a href="#" data-filter=".cf-hatchback"><i class="icon-car-hatchback"></i><span>Hatchback</span></a></li>
 							<li><a href="#" data-filter=".cf-minivan"><i class="icon-car-minivan"></i><span>Đa dụng</span></a></li>
@@ -725,19 +725,19 @@ sitemap: true
 							</article>
 
 							<!-- Car 3 -->
-							<article class="portfolio-item cf-cabriolet" style="padding-bottom: 40px">
+							<article class="portfolio-item cf-sedan" style="padding-bottom: 40px">
 								<div class="portfolio-image">
 									<a href="demos/car/car-single.html">
-										<img src="{{ site.url }}/car/assets/media/filter-cars/3.jpg" alt="Open Imagination">
+										<img src="{{ site.url }}/car/assets/media/filter-cars/VIOS-nguyentronghuynh.com.png" alt="Toyota Vios">
 										<div class="filter-p-pricing">
-											<span class="p-price t700 ls1">$62,300</span>
-											<span class="p-price-msrp">MSRP : <strong>$62,700</strong></span>
+											<span class="p-price t700 ls1">Giá từ</span>
+											<span class="p-price-msrp"><strong>531.000.000 VNĐ</strong></span>
 										</div>
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Audi 2018 S5 Cabriolet</a></h3>
-									<span>Competently evolve intuitive synergy without corporate human capital. Monotonectally.</span>
+									<h3><a href="demos/car/car-single.html">Toyota Vios</a></h3>
+									<span>VIOS mới với thiết kế giàu cảm xúc và công nghệ an toàn đạt chuẩn 5 sao sẽ là nguồn cảm hứng bất tận cho bạn khám phá mọi cung đường.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
 									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 0-60 mph</span></div>
@@ -749,19 +749,19 @@ sitemap: true
 							</article>
 
 							<!-- Car 4 -->
-							<article class="portfolio-item cf-cuv">
+							<article class="portfolio-item cf-sedan">
 								<div class="portfolio-image">
 									<a href="demos/car/car-single.html">
-										<img src="{{ site.url }}/car/assets/media/filter-cars/4.jpg" alt="Open Imagination">
+										<img src="{{ site.url }}/car/assets/media/filter-cars/COROLLA_ALTIS_nguyentronghuynh.com.png" alt="Toyota Corolla Altis">
 										<div class="filter-p-pricing">
-											<span class="p-price t700 ls1">$32,568</span>
-											<span class="p-price-msrp">MSRP : <strong>$35,698</strong></span>
+											<span class="p-price t700 ls1">Giá từ</span>
+											<span class="p-price-msrp"><strong>697.000.000 VNĐ</strong></span>
 										</div>
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">BMW 3 Series, ABS</a></h3>
-									<span>Energistically engineer user friendly synergy vis-a-vis enabled channels. Rapidiously utilize value-added. Laudantium debitis perferendis obcaecati.</span>
+									<h3><a href="demos/car/car-single.html">Toyota Corolla Altis</a></h3>
+									<span>Khả năng vận hành mạnh mẽ của Corolla Altis cho cảm giác lái tuyệt vời để luôn là người bạn đường ăn ý và đầy bản lĩnh.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
 									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 0-80 mph</span></div>
@@ -773,19 +773,19 @@ sitemap: true
 							</article>
 
 							<!-- Car 5 -->
-							<article class="portfolio-item cf-supercar">
+							<article class="portfolio-item cf-sedan">
 								<div class="portfolio-image">
 									<a href="demos/car/car-single.html">
-										<img src="{{ site.url }}/car/assets/media/filter-cars/5.jpg" alt="Open Imagination">
+										<img src="{{ site.url }}/car/assets/media/filter-cars/CAMRY_nguyentronghuynh.com.png" alt="Toyota Camry">
 										<div class="filter-p-pricing">
-											<span class="p-price t700 ls1">$32,568</span>
-											<span class="p-price-msrp">MSRP : <strong>$35,698</strong></span>
+											<span class="p-price t700 ls1">Giá từ</span>
+											<span class="p-price-msrp"><strong>997.000.000 VNĐ</strong></span>
 										</div>
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">2016 LEXUS IS 200T FSPORT</a></h3>
-									<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium debitis unde laboriosam perferendis obcaecati.</span>
+									<h3><a href="demos/car/car-single.html">Toyota Camry</a></h3>
+									<span>TOYOTA CAMRY khoác lên mình ngoại thất năng động và phong cách đĩnh đạc như chính chủ sở hữu nó.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
 									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-cog3"></i><span> 30,000 mi</span></div>
@@ -798,18 +798,143 @@ sitemap: true
 							</article>
 
 							<!-- Car 6 -->
-							<article class="portfolio-item cf-hatchback">
+							<article class="portfolio-item cf-suv">
 								<div class="portfolio-image">
 									<a href="demos/car/car-single.html">
-										<img src="{{ site.url }}/car/assets/media/filter-cars/6.jpg" alt="Open Imagination">
+										<img src="{{ site.url }}/car/assets/media/filter-cars/FORTUNER_nguyentronghuynh.com.png" alt="Toyota Fortuner">
 										<div class="filter-p-pricing">
-											<span class="p-price t700 ls1">$32,568</span>
-											<span class="p-price-msrp">MSRP : <strong>$35,698</strong></span>
+											<span class="p-price t700 ls1">Giá từ</span>
+											<span class="p-price-msrp"><strong>1.026.000.000 VNĐ</strong></span>
 										</div>
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Chevrolet T430 Hatchback</a></h3>
+									<h3><a href="demos/car/car-single.html">Toyota Fortuner</a></h3>
+									<span>Mỗi khi FORTUNER lướt qua là một lần cuốn theo những ánh nhìn ngưỡng mộ với dáng vẻ mạnh mẽ nhưng vẫn đậm chất hào hoa.</span>
+								</div>
+								<div class="row no-gutters car-p-features font-primary clearfix">
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 20000</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-door"></i><span> 5 Seater</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-fuel2"></i><span> 20kmpl</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-signal"></i><span> Automatic</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-wheel"></i><span> 15 Inch</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-care"></i><span> 2015</span></div>
+								</div>
+							</article>
+
+							<!-- Car 7 -->
+							<article class="portfolio-item cf-suv">
+								<div class="portfolio-image">
+									<a href="demos/car/car-single.html">
+										<img src="{{ site.url }}/car/assets/media/filter-cars/FORTUNER_nguyentronghuynh.com.png" alt="Toyota Fortuner">
+										<div class="filter-p-pricing">
+											<span class="p-price t700 ls1">Giá từ</span>
+											<span class="p-price-msrp"><strong>2.340.000.000 VNĐ</strong></span>
+										</div>
+									</a>
+								</div>
+								<div class="portfolio-desc">
+									<h3><a href="demos/car/car-single.html">Toyota Fortuner</a></h3>
+									<span>Kế thừa dáng vẻ bề thế, to khỏe, vững chắc của chiếc xe việt dã danh tiếng toàn cầu; Với triết lý thiết kế "Hiện đại - Thông minh", Land Cruiser Prado trở thành niềm tự hào và góp phần nâng cao vị thế của chủ sở hữu trên mọi địa hình.</span>
+								</div>
+								<div class="row no-gutters car-p-features font-primary clearfix">
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 20000</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-door"></i><span> 5 Seater</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-fuel2"></i><span> 20kmpl</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-signal"></i><span> Automatic</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-wheel"></i><span> 15 Inch</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-care"></i><span> 2015</span></div>
+								</div>
+							</article>
+
+							<!-- Car 8 -->
+							<article class="portfolio-item cf-hatchback">
+								<div class="portfolio-image">
+									<a href="demos/car/car-single.html">
+										<img src="{{ site.url }}/car/assets/media/filter-cars/FORTUNER_nguyentronghuynh.com.png" alt="Toyota Fortuner">
+										<div class="filter-p-pricing">
+											<span class="p-price t700 ls1">Giá từ</span>
+											<span class="p-price-msrp"><strong>1.026.000.000 VNĐ</strong></span>
+										</div>
+									</a>
+								</div>
+								<div class="portfolio-desc">
+									<h3><a href="demos/car/car-single.html">Toyota Fortuner</a></h3>
+									<span>Appropriately exploit strategic niche markets rather than optimal products. Enthusiastically negotiate perferendis the art methods of empowermen.</span>
+								</div>
+								<div class="row no-gutters car-p-features font-primary clearfix">
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 20000</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-door"></i><span> 5 Seater</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-fuel2"></i><span> 20kmpl</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-signal"></i><span> Automatic</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-wheel"></i><span> 15 Inch</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-care"></i><span> 2015</span></div>
+								</div>
+							</article>
+
+							<!-- Car 9 -->
+							<article class="portfolio-item cf-hatchback">
+								<div class="portfolio-image">
+									<a href="demos/car/car-single.html">
+										<img src="{{ site.url }}/car/assets/media/filter-cars/FORTUNER_nguyentronghuynh.com.png" alt="Toyota Fortuner">
+										<div class="filter-p-pricing">
+											<span class="p-price t700 ls1">Giá từ</span>
+											<span class="p-price-msrp"><strong>1.026.000.000 VNĐ</strong></span>
+										</div>
+									</a>
+								</div>
+								<div class="portfolio-desc">
+									<h3><a href="demos/car/car-single.html">Toyota Fortuner</a></h3>
+									<span>Appropriately exploit strategic niche markets rather than optimal products. Enthusiastically negotiate perferendis the art methods of empowermen.</span>
+								</div>
+								<div class="row no-gutters car-p-features font-primary clearfix">
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 20000</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-door"></i><span> 5 Seater</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-fuel2"></i><span> 20kmpl</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-signal"></i><span> Automatic</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-wheel"></i><span> 15 Inch</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-care"></i><span> 2015</span></div>
+								</div>
+							</article>
+
+							<!-- Car 10 -->
+							<article class="portfolio-item cf-hatchback">
+								<div class="portfolio-image">
+									<a href="demos/car/car-single.html">
+										<img src="{{ site.url }}/car/assets/media/filter-cars/FORTUNER_nguyentronghuynh.com.png" alt="Toyota Fortuner">
+										<div class="filter-p-pricing">
+											<span class="p-price t700 ls1">Giá từ</span>
+											<span class="p-price-msrp"><strong>1.026.000.000 VNĐ</strong></span>
+										</div>
+									</a>
+								</div>
+								<div class="portfolio-desc">
+									<h3><a href="demos/car/car-single.html">Toyota Fortuner</a></h3>
+									<span>Appropriately exploit strategic niche markets rather than optimal products. Enthusiastically negotiate perferendis the art methods of empowermen.</span>
+								</div>
+								<div class="row no-gutters car-p-features font-primary clearfix">
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 20000</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-door"></i><span> 5 Seater</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-fuel2"></i><span> 20kmpl</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-signal"></i><span> Automatic</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-wheel"></i><span> 15 Inch</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-care"></i><span> 2015</span></div>
+								</div>
+							</article>
+
+							<!-- Car 11 -->
+							<article class="portfolio-item cf-hatchback">
+								<div class="portfolio-image">
+									<a href="demos/car/car-single.html">
+										<img src="{{ site.url }}/car/assets/media/filter-cars/FORTUNER_nguyentronghuynh.com.png" alt="Toyota Fortuner">
+										<div class="filter-p-pricing">
+											<span class="p-price t700 ls1">Giá từ</span>
+											<span class="p-price-msrp"><strong>1.026.000.000 VNĐ</strong></span>
+										</div>
+									</a>
+								</div>
+								<div class="portfolio-desc">
+									<h3><a href="demos/car/car-single.html">Toyota Fortuner</a></h3>
 									<span>Appropriately exploit strategic niche markets rather than optimal products. Enthusiastically negotiate perferendis the art methods of empowermen.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
