--- a/car.html
+++ b/car.html
@@ -826,7 +826,7 @@ sitemap: true
 							<article class="portfolio-item cf-suv">
 								<div class="portfolio-image">
 									<a href="demos/car/car-single.html">
-										<img src="{{ site.url }}/car/assets/media/filter-cars/FORTUNER_nguyentronghuynh.com.png" alt="Toyota Fortuner">
+										<img src="{{ site.url }}/car/assets/media/filter-cars/LAND_CRUISER_PRADO_nguyentronghuynh.com.png" alt="Toyota Land Cruiser Prado">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
 											<span class="p-price-msrp"><strong>2.340.000.000 VNĐ</strong></span>
@@ -834,8 +834,8 @@ sitemap: true
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Fortuner</a></h3>
-									<span>Kế thừa dáng vẻ bề thế, to khỏe, vững chắc của chiếc xe việt dã danh tiếng toàn cầu; Với triết lý thiết kế "Hiện đại - Thông minh", Land Cruiser Prado trở thành niềm tự hào và góp phần nâng cao vị thế của chủ sở hữu trên mọi địa hình.</span>
+									<h3><a href="demos/car/car-single.html">Toyota Land Cruiser Prado</a></h3>
+									<span>Land Cruiser Prado kế thừa dáng vẻ bề thế, to khỏe, vững chắc của chiếc xe việt dã danh tiếng toàn cầu; triết lý thiết kế "Hiện đại - Thông minh".</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
 									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 20000</span></div>
