--- a/car.html
+++ b/car.html
@@ -848,19 +848,19 @@ sitemap: true
 							</article>
 
 							<!-- Car 8 -->
-							<article class="portfolio-item cf-hatchback">
+							<article class="portfolio-item cf-van">
 								<div class="portfolio-image">
 									<a href="demos/car/car-single.html">
-										<img src="{{ site.url }}/car/assets/media/filter-cars/FORTUNER_nguyentronghuynh.com.png" alt="Toyota Fortuner">
+										<img src="{{ site.url }}/car/assets/media/filter-cars/ALPHARD_LUXURY_nguyentronghuynh.com.png" alt="Toyota Alphard Luxury">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
-											<span class="p-price-msrp"><strong>1.026.000.000 VNĐ</strong></span>
+											<span class="p-price-msrp"><strong>4.038.000.000 VNĐ</strong></span>
 										</div>
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Fortuner</a></h3>
-									<span>Appropriately exploit strategic niche markets rather than optimal products. Enthusiastically negotiate perferendis the art methods of empowermen.</span>
+									<h3><a href="demos/car/car-single.html">Toyota Alphard Luxury</a></h3>
+									<span>Tạo ấn tượng mạnh mẽ ngay từ ánh nhìn đầu tiên, Alphard không chỉ sở hữu dáng vẻ oai vệ, lịch lãm và sang trọng mà còn mang đến trải nghiệm tiện nghi tột bậc.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
 									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 20000</span></div>
@@ -873,19 +873,19 @@ sitemap: true
 							</article>
 
 							<!-- Car 9 -->
-							<article class="portfolio-item cf-hatchback">
+							<article class="portfolio-item cf-suv">
 								<div class="portfolio-image">
 									<a href="demos/car/car-single.html">
-										<img src="{{ site.url }}/car/assets/media/filter-cars/FORTUNER_nguyentronghuynh.com.png" alt="Toyota Fortuner">
+										<img src="{{ site.url }}/car/assets/media/filter-cars/RUSH_nguyentronghuynh.com.png" alt="Toyota Rush">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
-											<span class="p-price-msrp"><strong>1.026.000.000 VNĐ</strong></span>
+											<span class="p-price-msrp"><strong>668.000.000 VNĐ</strong></span>
 										</div>
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Fortuner</a></h3>
-									<span>Appropriately exploit strategic niche markets rather than optimal products. Enthusiastically negotiate perferendis the art methods of empowermen.</span>
+									<h3><a href="demos/car/car-single.html">Toyota Rush</a></h3>
+									<span>Với diện mạo khỏe khoắn cùng đường nét tinh tế đến từng chi tiết, TOYOTA RUSH đại diện cho tinh thần khát khao chinh phục những tầm cao mới.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
 									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 20000</span></div>
@@ -898,19 +898,19 @@ sitemap: true
 							</article>
 
 							<!-- Car 10 -->
-							<article class="portfolio-item cf-hatchback">
+							<article class="portfolio-item cf-minivan">
 								<div class="portfolio-image">
 									<a href="demos/car/car-single.html">
-										<img src="{{ site.url }}/car/assets/media/filter-cars/FORTUNER_nguyentronghuynh.com.png" alt="Toyota Fortuner">
+										<img src="{{ site.url }}/car/assets/media/filter-cars/INNOVA_nguyentronghuynh.com.png" alt="Toyota Innova">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
-											<span class="p-price-msrp"><strong>1.026.000.000 VNĐ</strong></span>
+											<span class="p-price-msrp"><strong>771.000.000 VNĐ</strong></span>
 										</div>
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Fortuner</a></h3>
-									<span>Appropriately exploit strategic niche markets rather than optimal products. Enthusiastically negotiate perferendis the art methods of empowermen.</span>
+									<h3><a href="demos/car/car-single.html">Toyota Innova</a></h3>
+									<span>Sở hữu vẻ ngoài sang trọng cùng khung gầm vững chắc, Innova Thế hệ đột phá đáp ứng mọi nhu cầu cho cuộc sống hiện đại, là người đồng hành lý tưởng.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
 									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 20000</span></div>
@@ -926,16 +926,41 @@ sitemap: true
 							<article class="portfolio-item cf-hatchback">
 								<div class="portfolio-image">
 									<a href="demos/car/car-single.html">
-										<img src="{{ site.url }}/car/assets/media/filter-cars/FORTUNER_nguyentronghuynh.com.png" alt="Toyota Fortuner">
+										<img src="{{ site.url }}/car/assets/media/filter-cars/AVANZA_nguyentronghuynh.com.png" alt="Toyota Avanza">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
-											<span class="p-price-msrp"><strong>1.026.000.000 VNĐ</strong></span>
+											<span class="p-price-msrp"><strong>537.000.000 VNĐ</strong></span>
 										</div>
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Fortuner</a></h3>
-									<span>Appropriately exploit strategic niche markets rather than optimal products. Enthusiastically negotiate perferendis the art methods of empowermen.</span>
+									<h3><a href="demos/car/car-single.html">Toyota Avanza</a></h3>
+									<span>Toyota Avanza với thiết kế hiện đại cùng các đường dập nổi bên thân xe mang lại cảm giác vững chãi và khỏe khoắn.</span>
+								</div>
+								<div class="row no-gutters car-p-features font-primary clearfix">
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 20000</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-door"></i><span> 5 Seater</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-fuel2"></i><span> 20kmpl</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-signal"></i><span> Automatic</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-wheel"></i><span> 15 Inch</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-care"></i><span> 2015</span></div>
+								</div>
+							</article>
+
+							<!-- Car 12 -->
+							<article class="portfolio-item cf-hatchback">
+								<div class="portfolio-image">
+									<a href="demos/car/car-single.html">
+										<img src="{{ site.url }}/car/assets/media/filter-cars/HIACE_nguyentronghuynh.com.png" alt="Toyota Hiace">
+										<div class="filter-p-pricing">
+											<span class="p-price t700 ls1">Giá từ</span>
+											<span class="p-price-msrp"><strong>999.000.000 VNĐ</strong></span>
+										</div>
+									</a>
+								</div>
+								<div class="portfolio-desc">
+									<h3><a href="demos/car/car-single.html">Toyota Hiace</a></h3>
+									<span>Trải nghiệm không gian nội thất rộng rãi và tiện nghi, 5 hàng ghế được sắp xếp hợp lí tạo nên sự thoải mái tối đa cho người ngồi.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
 									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 20000</span></div>
