--- a/car.html
+++ b/car.html
@@ -848,7 +848,7 @@ sitemap: true
 							</article>
 
 							<!-- Car 8 -->
-							<article class="portfolio-item cf-van">
+							<article class="portfolio-item cf-minivan">
 								<div class="portfolio-image">
 									<a href="demos/car/car-single.html">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/ALPHARD_LUXURY_nguyentronghuynh.com.png" alt="Toyota Alphard Luxury">
@@ -923,7 +923,7 @@ sitemap: true
 							</article>
 
 							<!-- Car 11 -->
-							<article class="portfolio-item cf-hatchback">
+							<article class="portfolio-item cf-minivan">
 								<div class="portfolio-image">
 									<a href="demos/car/car-single.html">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/AVANZA_nguyentronghuynh.com.png" alt="Toyota Avanza">
@@ -948,7 +948,7 @@ sitemap: true
 							</article>
 
 							<!-- Car 12 -->
-							<article class="portfolio-item cf-hatchback">
+							<article class="portfolio-item cf-van">
 								<div class="portfolio-image">
 									<a href="demos/car/car-single.html">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/HIACE_nguyentronghuynh.com.png" alt="Toyota Hiace">
@@ -961,6 +961,31 @@ sitemap: true
 								<div class="portfolio-desc">
 									<h3><a href="demos/car/car-single.html">Toyota Hiace</a></h3>
 									<span>Trải nghiệm không gian nội thất rộng rãi và tiện nghi, 5 hàng ghế được sắp xếp hợp lí tạo nên sự thoải mái tối đa cho người ngồi.</span>
+								</div>
+								<div class="row no-gutters car-p-features font-primary clearfix">
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 20000</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-door"></i><span> 5 Seater</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-fuel2"></i><span> 20kmpl</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-signal"></i><span> Automatic</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-wheel"></i><span> 15 Inch</span></div>
+									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-care"></i><span> 2015</span></div>
+								</div>
+							</article>
+
+							<!-- Car 13 -->
+							<article class="portfolio-item cf-pickup">
+								<div class="portfolio-image">
+									<a href="demos/car/car-single.html">
+										<img src="{{ site.url }}/car/assets/media/filter-cars/HILUX_nguyentronghuynh.com.png" alt="Toyota Hilux">
+										<div class="filter-p-pricing">
+											<span class="p-price t700 ls1">Giá từ</span>
+											<span class="p-price-msrp"><strong>695.000.000 VNĐ</strong></span>
+										</div>
+									</a>
+								</div>
+								<div class="portfolio-desc">
+									<h3><a href="demos/car/car-single.html">Toyota Hilux</a></h3>
+									<span>Đường dập nổi và bề mặt lượn sóng ở hông xe được tiếp nối ở phần đuôi xe, tạo nên tổng thể cân đối, hài hòa và liền mạch cho cả chiếc xe.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
 									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 20000</span></div>
