--- a/car.html
+++ b/car.html
@@ -680,8 +680,8 @@ sitemap: true
 									<a href="demos/car/car-single.html">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/YARIS-nguyentronghuynh.com.png" alt="Toyota Yaris">
 										<div class="filter-p-pricing">
-											<span class="p-price-msrp ls1"><strong>Giá từ</strong></span>
-											<span class="p-price t700">650.000.000 VNĐ</span>
+											<span class="p-price t700 ls1">Giá từ</span>
+											<span class="p-price-msrp"><strong>650.000.000 VNĐ</strong></span>
 										</div>
 									</a>
 								</div>
@@ -705,8 +705,8 @@ sitemap: true
 									<a href="demos/car/car-single.html">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/WIGO-nguyentronghuynh.com.png" alt="Toyota Wigo">
 										<div class="filter-p-pricing">
-											<span class="p-price-msrp ls1"><strong>Giá từ</strong></span>
-											<span class="p-price t700">345.000.000 VNĐ</span>
+											<span class="p-price t700 ls1">Giá từ</span>
+											<span class="p-price-msrp"><strong>345.000.000 VNĐ</strong></span>
 										</div>
 									</a>
 								</div>
