--- a/car.html
+++ b/car.html
@@ -785,7 +785,7 @@ sitemap: true
 								</div>
 								<div class="portfolio-desc">
 									<h3><a href="demos/car/car-single.html">Toyota Camry</a></h3>
-									<span>TOYOTA CAMRY khoác lên mình ngoại thất năng động và phong cách đĩnh đạc như chính chủ sở hữu nó.</span>
+									<span>TOYOTA CAMRY khoác lên mình ngoại thất năng động và phong cách đĩnh đạc như chính chủ sở hữu nó. Các vật liệu cao cấp của TOYOTA CAMRY tạo nên sự sang trọng và tinh tế.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
 									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-cog3"></i><span> 30,000 mi</span></div>
@@ -935,7 +935,7 @@ sitemap: true
 								</div>
 								<div class="portfolio-desc">
 									<h3><a href="demos/car/car-single.html">Toyota Avanza</a></h3>
-									<span>Toyota Avanza với thiết kế hiện đại cùng các đường dập nổi bên thân xe mang lại cảm giác vững chãi và khỏe khoắn.</span>
+									<span>Diện mạo tinh tế, mạnh mẽ Toyota Avanza với thiết kế hiện đại cùng các đường dập nổi bên thân xe mang lại cảm giác vững chãi và khỏe khoắn.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
 									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-meter"></i><span> 20000</span></div>
