--- a/car.html
+++ b/car.html
@@ -677,7 +677,7 @@ sitemap: true
 							<!-- Car 1 -->
 							<article class="portfolio-item cf-hatchback" style="padding-bottom: 40px">
 								<div class="portfolio-image">
-									<a href="demos/car/car-single.html">
+									<a href="yaris/">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/YARIS-nguyentronghuynh.com.png" alt="Toyota Yaris">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
@@ -686,7 +686,7 @@ sitemap: true
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Yaris</a></h3>
+									<h3><a href="yaris/">TOYOTA YARIS</a></h3>
 									<span>Yaris thế hệ mới với thiết kế đột phá, ấn tượng, dáng vẻ năng động và cá tính mang đến cảm giác đầy kiêu hãnh và tự hào khi sở hữu một dòng xe đậm dấu ấn riêng.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
@@ -702,7 +702,7 @@ sitemap: true
 							<!-- Car 2 -->
 							<article class="portfolio-item cf-hatchback" style="padding-bottom: 40px">
 								<div class="portfolio-image">
-									<a href="demos/car/car-single.html">
+									<a href="wigo/">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/WIGO-nguyentronghuynh.com.png" alt="Toyota Wigo">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
@@ -711,7 +711,7 @@ sitemap: true
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Wigo</a></h3>
+									<h3><a href="wigo/">TOYOTA WIGO</a></h3>
 									<span>TOYOTA WIGO là mẫu xe nhỏ sở hữu ngoại hình đậm chất thể thao với ngôn ngữ thiết kế trẻ trung và nhiều lựa chọn về màu sắc.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
@@ -727,7 +727,7 @@ sitemap: true
 							<!-- Car 3 -->
 							<article class="portfolio-item cf-sedan" style="padding-bottom: 40px">
 								<div class="portfolio-image">
-									<a href="demos/car/car-single.html">
+									<a href="vios/">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/VIOS-nguyentronghuynh.com.png" alt="Toyota Vios">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
@@ -736,7 +736,7 @@ sitemap: true
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Vios</a></h3>
+									<h3><a href="vios/">TOYOTA VIOS</a></h3>
 									<span>VIOS mới với thiết kế giàu cảm xúc và công nghệ an toàn đạt chuẩn 5 sao sẽ là nguồn cảm hứng bất tận cho bạn khám phá mọi cung đường.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
@@ -751,7 +751,7 @@ sitemap: true
 							<!-- Car 4 -->
 							<article class="portfolio-item cf-sedan">
 								<div class="portfolio-image">
-									<a href="demos/car/car-single.html">
+									<a href="corolla-altis/">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/COROLLA_ALTIS_nguyentronghuynh.com.png" alt="Toyota Corolla Altis">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
@@ -760,7 +760,7 @@ sitemap: true
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Corolla Altis</a></h3>
+									<h3><a href="corolla-altis/">TOYOTA COROLLA ALTIS</a></h3>
 									<span>Khả năng vận hành mạnh mẽ của Corolla Altis cho cảm giác lái tuyệt vời để luôn là người bạn đường ăn ý và đầy bản lĩnh.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
@@ -775,7 +775,7 @@ sitemap: true
 							<!-- Car 5 -->
 							<article class="portfolio-item cf-sedan">
 								<div class="portfolio-image">
-									<a href="demos/car/car-single.html">
+									<a href="camry/">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/CAMRY_nguyentronghuynh.com.png" alt="Toyota Camry">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
@@ -784,7 +784,7 @@ sitemap: true
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Camry</a></h3>
+									<h3><a href="camry/">TOYOTA CAMRY</a></h3>
 									<span>TOYOTA CAMRY khoác lên mình ngoại thất năng động và phong cách đĩnh đạc như chính chủ sở hữu nó. Các vật liệu cao cấp của TOYOTA CAMRY tạo nên sự sang trọng và tinh tế.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
@@ -800,7 +800,7 @@ sitemap: true
 							<!-- Car 6 -->
 							<article class="portfolio-item cf-suv">
 								<div class="portfolio-image">
-									<a href="demos/car/car-single.html">
+									<a href="fortuner/">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/FORTUNER_nguyentronghuynh.com.png" alt="Toyota Fortuner">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
@@ -809,7 +809,7 @@ sitemap: true
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Fortuner</a></h3>
+									<h3><a href="fortuner/">TOYOTA FORTUNER</a></h3>
 									<span>Mỗi khi FORTUNER lướt qua là một lần cuốn theo những ánh nhìn ngưỡng mộ với dáng vẻ mạnh mẽ nhưng vẫn đậm chất hào hoa.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
@@ -825,7 +825,7 @@ sitemap: true
 							<!-- Car 7 -->
 							<article class="portfolio-item cf-suv">
 								<div class="portfolio-image">
-									<a href="demos/car/car-single.html">
+									<a href="land-cruiser-prado/">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/LAND_CRUISER_PRADO_nguyentronghuynh.com.png" alt="Toyota Land Cruiser Prado">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
@@ -834,7 +834,7 @@ sitemap: true
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Land Cruiser Prado</a></h3>
+									<h3><a href="land-cruiser-prado/">TOYOTA LAND CRUISER PRADO</a></h3>
 									<span>Land Cruiser Prado kế thừa dáng vẻ bề thế, to khỏe, vững chắc của chiếc xe việt dã danh tiếng toàn cầu; triết lý thiết kế "Hiện đại - Thông minh".</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
@@ -850,7 +850,7 @@ sitemap: true
 							<!-- Car 8 -->
 							<article class="portfolio-item cf-minivan">
 								<div class="portfolio-image">
-									<a href="demos/car/car-single.html">
+									<a href="alphard-luxury/">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/ALPHARD_LUXURY_nguyentronghuynh.com.png" alt="Toyota Alphard Luxury">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
@@ -859,7 +859,7 @@ sitemap: true
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Alphard Luxury</a></h3>
+									<h3><a href="alphard-luxury/">TOYOTA ALPHARD LUXURY</a></h3>
 									<span>Tạo ấn tượng mạnh mẽ ngay từ ánh nhìn đầu tiên, Alphard không chỉ sở hữu dáng vẻ oai vệ, lịch lãm và sang trọng mà còn mang đến trải nghiệm tiện nghi tột bậc.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
@@ -875,7 +875,7 @@ sitemap: true
 							<!-- Car 9 -->
 							<article class="portfolio-item cf-suv">
 								<div class="portfolio-image">
-									<a href="demos/car/car-single.html">
+									<a href="rush/">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/RUSH_nguyentronghuynh.com.png" alt="Toyota Rush">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
@@ -884,7 +884,7 @@ sitemap: true
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Rush</a></h3>
+									<h3><a href="rush/">TOYOTA RUSH</a></h3>
 									<span>Với diện mạo khỏe khoắn cùng đường nét tinh tế đến từng chi tiết, TOYOTA RUSH đại diện cho tinh thần khát khao chinh phục những tầm cao mới.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
@@ -900,7 +900,7 @@ sitemap: true
 							<!-- Car 10 -->
 							<article class="portfolio-item cf-minivan">
 								<div class="portfolio-image">
-									<a href="demos/car/car-single.html">
+									<a href="innova/">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/INNOVA_nguyentronghuynh.com.png" alt="Toyota Innova">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
@@ -909,7 +909,7 @@ sitemap: true
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Innova</a></h3>
+									<h3><a href="innova/">TOYOTA INNOVA</a></h3>
 									<span>Sở hữu vẻ ngoài sang trọng cùng khung gầm vững chắc, Innova Thế hệ đột phá đáp ứng mọi nhu cầu cho cuộc sống hiện đại, là người đồng hành lý tưởng.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
@@ -925,7 +925,7 @@ sitemap: true
 							<!-- Car 11 -->
 							<article class="portfolio-item cf-minivan">
 								<div class="portfolio-image">
-									<a href="demos/car/car-single.html">
+									<a href="avanza/">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/AVANZA_nguyentronghuynh.com.png" alt="Toyota Avanza">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
@@ -934,7 +934,7 @@ sitemap: true
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Avanza</a></h3>
+									<h3><a href="avanza/">TOYOTA AVANZA</a></h3>
 									<span>Diện mạo tinh tế, mạnh mẽ Toyota Avanza với thiết kế hiện đại cùng các đường dập nổi bên thân xe mang lại cảm giác vững chãi và khỏe khoắn.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
@@ -950,7 +950,7 @@ sitemap: true
 							<!-- Car 12 -->
 							<article class="portfolio-item cf-van">
 								<div class="portfolio-image">
-									<a href="demos/car/car-single.html">
+									<a href="hiace/">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/HIACE_nguyentronghuynh.com.png" alt="Toyota Hiace">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
@@ -959,7 +959,7 @@ sitemap: true
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Hiace</a></h3>
+									<h3><a href="hiace/">TOYOTA HIACE</a></h3>
 									<span>Trải nghiệm không gian nội thất rộng rãi và tiện nghi, 5 hàng ghế được sắp xếp hợp lí tạo nên sự thoải mái tối đa cho người ngồi.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
@@ -975,7 +975,7 @@ sitemap: true
 							<!-- Car 13 -->
 							<article class="portfolio-item cf-pickup">
 								<div class="portfolio-image">
-									<a href="demos/car/car-single.html">
+									<a href="hilux/">
 										<img src="{{ site.url }}/car/assets/media/filter-cars/HILUX_nguyentronghuynh.com.png" alt="Toyota Hilux">
 										<div class="filter-p-pricing">
 											<span class="p-price t700 ls1">Giá từ</span>
@@ -984,7 +984,7 @@ sitemap: true
 									</a>
 								</div>
 								<div class="portfolio-desc">
-									<h3><a href="demos/car/car-single.html">Toyota Hilux</a></h3>
+									<h3><a href="hilux/">TOYOTA HILUX</a></h3>
 									<span>Đường dập nổi và bề mặt lượn sóng ở hông xe được tiếp nối ở phần đuôi xe, tạo nên tổng thể cân đối, hài hòa và liền mạch cho cả chiếc xe.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
