--- a/car.html
+++ b/car.html
@@ -785,7 +785,7 @@ sitemap: true
 								</div>
 								<div class="portfolio-desc">
 									<h3><a href="camry/">TOYOTA CAMRY</a></h3>
-									<span>TOYOTA CAMRY khoác lên mình ngoại thất năng động và phong cách đĩnh đạc như chính chủ sở hữu nó. Các vật liệu cao cấp của TOYOTA CAMRY tạo nên sự sang trọng và tinh tế.</span>
+									<span>TOYOTA CAMRY khoác lên mình ngoại thất năng động và phong cách đĩnh đạc như chính chủ sở hữu nó. Các vật liệu cao cấp tạo nên sự sang trọng và tinh tế.</span>
 								</div>
 								<div class="row no-gutters car-p-features font-primary clearfix">
 									<div class="col-lg-4 col-6 nopadding"><i class="icon-car-cog3"></i><span> 30,000 mi</span></div>
