--- a/car.html
+++ b/car.html
@@ -1,10 +1,10 @@
 ---
 layout: car/home
-title: "Toytota"
-meta-title: "Toytota"
-description: ""
-meta-description: ""
-meta-keywords: ""
+title: "Toytota Thái Hòa Từ Liêm"
+meta-title: "Toytota Thái Hòa Từ Liêm"
+description: "Toyota Thái Hòa – Từ Liêm luôn nỗ lực làm hài lòng quý khách. Chúng tôi có những chính sách về giá xe hợp lý, các khuyến mại đem lại lợi ích lớn, và các lời khuyên, cố vấn chuyên nghiệp dành cho thủ tục hành chính, bao gồm trả góp và trả thẳng."
+meta-description: "Toyota Thái Hòa – Từ Liêm luôn nỗ lực làm hài lòng quý khách. Chúng tôi có những chính sách về giá xe hợp lý, các khuyến mại đem lại lợi ích lớn, và các lời khuyên, cố vấn chuyên nghiệp dành cho thủ tục hành chính, bao gồm trả góp và trả thẳng."
+meta-keywords: "toyota thái hòa, toyota thái hòa từ liêm, thái hòa từ liêm, thái hòa, toyota tố hữu, toyota từ liêm, toyota lê văn lương"
 permalink: "car/"
 published: true
 sitemap: true
@@ -27,7 +27,7 @@ sitemap: true
 								<div class="heading-block hlarge">
 									<h1>TOYOTA<br>THÁI HÒA TỪ LIÊM</h1>
 								</div>
-								<p><a href="{{ site.url }}/car/">Toyota Thái Hòa Từ Liêm</a> là đại lý 3S chính thức của <a href="www.toyota.com.vn">Toyota Việt Nam</a> tọa lạc tại vị trí phía tây Hà Nội với trục đường Tố Hữu Mỗ Lao. <b>Toyota Thái Hòa Từ Liêm</b> Hoạt động kết hợp 3 chức năng: Bán hàng; Bảo dưỡng, sửa chữa và Cung cấp phụ tùng chính hãng thành một hệ thống thống nhất.</p>
+								<p><a href="{{ site.url }}/car/"><strong>TOYOTA THÁI HÒA TỪ LIÊM</strong></a> là đại lý 3S chính thức của <a href="www.toyota.com.vn">Toyota Việt Nam</a> tọa lạc tại vị trí phía tây Hà Nội với trục đường Tố Hữu Mỗ Lao. <b>Toyota Thái Hòa Từ Liêm</b> Hoạt động kết hợp 3 chức năng: Bán hàng; Bảo dưỡng, sửa chữa và Cung cấp phụ tùng chính hãng thành một hệ thống thống nhất.</p>
 							</div>
 						</div>
 					</div>
