--- a/car.html
+++ b/car.html
@@ -1074,7 +1074,7 @@ sitemap: true
 
 				<!-- 360 degree car
 				============================================= -->
-				<div class="section dark nobottommargin clearfix" style="background: #FFF url('{{ site.url }}/car/assets/media/1.jpg') right bottom no-repeat; background-size: cover; padding: 80px 0 40px">
+				<!--div class="section dark nobottommargin clearfix" style="background: #FFF url('{{ site.url }}/car/assets/media/1.jpg') right bottom no-repeat; background-size: cover; padding: 80px 0 40px">
 					<div class="container-fluid clearfix" style="position: relative; z-index: 2;">
 						<div class="row clearfix">
 							<div class="col-lg-8">
@@ -1082,7 +1082,7 @@ sitemap: true
 									<h3 style="font-size: 32px; text-transform: ;  font-weight: 700;">360 Degree Drag</h3>
 								</div>
 								<!-- 360 degree Car Content -->
-								<div class="threesixty 360-car">
+								<!--div class="threesixty 360-car">
 									<div class="spinner">
 										<span>0%</span>
 									</div>
